# DL_Exp

./: .gitignore  README.md
CS231n/: CIFAR10.py  knn.py  scikit_KNN.py
CS231n/Traffic_Sign/: CMakeLists.txt  tsc.cpp  tsc32.txt  visualise.py
CS231n/Traffic_Sign/test/: CMakeLists.txt  cnn.cpp
CS231n/Traffic_Sign/test/tiny_dnn/: tiny_dnn.h
CS231n/Traffic_Sign/tiny_dnn/: tiny_dnn.h
CS231n/assignment_1/: knn.ipynb  softmax.ipynb  svm.ipynb  two_layer_net.ipynb
CS231n/assignment_1/.ipynb_checkpoints/: features-checkpoint.ipynb  two_layer_net-checkpoint.ipynb
Deep_Learning_CS7.601/A2/:  Gradient Descent Method.ipynb   Gradient Descent and Variants - 1.ipynb   Gradient Descent and Variants - 2.ipynb  BackProp, RProp and Quickprop.ipynb  Preprocessing.ipynb
Pegasos_SVM/: fmnist.py  ksvm.py  readme  svm.py  time.py
SMAI/: 5.py  5_2.py  5_3.py  MSE_regression.py  MSE_wrong.py  PCA.py  README.md  acc_mnist.py  assign7.py  assign72.py  bayes.py  cifar10.py  decision_boundary_bayes.py  decision_boundary_gaussian.py  decision_tree.py  errors.py  learning_rate.py  logistic.py  mse_conv.py  newt.txt  nonconv.py  out.txt  perceptron.py  posterior.py  sgd.txt  sgdvnewt.py  test.py
SMAI/mini-project-1/: data.py  ground.txt  linear_classifier.py  make_txt.py  naive_bayes.py  pca.py  pred.txt  test.txt  train.txt
SMAI/mini-project-1/eval/: eval.py  gt.txt  linear_classifier.py  (+1 more)
SMAI/mini-project-2/: Mini_P2.ipynb
Siraj_Intro_DL/linear_reg/: challenge.py
TF_Practice/: test.py
diffusers/: diffusion.py
transformers/: alibi.py  transformer.py  vision_transformer.py
(+6 files in other folders)
